# SimpleSend

./: .gitignore  CMakeLists.txt  environment.md  main.cpp
GUI/: CMakeLists.txt  SimplesendGUI.spec
GUI/Simplesend_GUI/: CMakeLists.txt
lib/: CMakeLists.txt  lib_LIST.md
lib/gflags/lib/cmake/gflags/: gflags-nonamespace-targets-release.cmake  gflags-nonamespace-targets.cmake  gflags-targets-release.cmake  gflags-targets.cmake
lib/glog/lib/cmake/glog/: glog-targets.cmake
lib/glog/lib/pkgconfig/: libglog.pc
lib/hash/: CMakeLists.txt
lib/hash/include/hash/: hash4cxx.h  md5.h  sha1.h  sha224.h
lib/hash/src/: md5.cpp  sha1.cpp  sha224.cpp
lib/md5/src/: md5fcxx.cpp
src/: CMakeLists.txt
